[gd_scene load_steps=24 format=2]

[ext_resource path="res://Ancient Caves Tileset/Tileset and SpriteSheets/Tileset Add on.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Tutorial.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="TileSet" id=1]
1/name = "Tileset Add on.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 32, 32, 48, 48 )
1/tile_mode = 1
1/autotile/bitmask_mode = 2
1/autotile/bitmask_flags = [ Vector2( 0, 0 ), 432, Vector2( 0, 1 ), 438, Vector2( 0, 2 ), 54, Vector2( 1, 0 ), 504, Vector2( 1, 1 ), 511, Vector2( 1, 2 ), 63, Vector2( 2, 0 ), 216, Vector2( 2, 1 ), 219, Vector2( 2, 2 ), 27 ]
1/autotile/icon_coordinate = Vector2( 0, 0 )
1/autotile/tile_size = Vector2( 16, 16 )
1/autotile/spacing = 0
1/autotile/occluder_map = [  ]
1/autotile/navpoly_map = [  ]
1/autotile/priority_map = [  ]
1/autotile/z_index_map = [  ]
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 2 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0

[sub_resource type="TileSet" id=11]
0/name = "Tileset Add on.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 32, 32, 48, 16 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 16, 16 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "Tileset Add on.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 112, 0, 48, 16 )
1/tile_mode = 2
1/autotile/icon_coordinate = Vector2( 0, 0 )
1/autotile/tile_size = Vector2( 16, 16 )
1/autotile/spacing = 0
1/autotile/occluder_map = [  ]
1/autotile/navpoly_map = [  ]
1/autotile/priority_map = [  ]
1/autotile/z_index_map = [  ]
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "Tileset Add on.png 2"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 32, 128, 48, 16 )
2/tile_mode = 2
2/autotile/icon_coordinate = Vector2( 0, 0 )
2/autotile/tile_size = Vector2( 16, 16 )
2/autotile/spacing = 0
2/autotile/occluder_map = [  ]
2/autotile/navpoly_map = [  ]
2/autotile/priority_map = [  ]
2/autotile/z_index_map = [  ]
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 144, 8 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 207, 120.5 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 98.5, 121 )

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 131, 97.5 )

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 389.5, 103 )

[sub_resource type="Animation" id=17]
resource_name = "CrouchArea"
length = 3.0
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("CrouchArea/Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.55 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 720, -178 ), Vector2( 720, -188 ) ]
}

[sub_resource type="Animation" id=20]
resource_name = "DashArea"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("DashArea/Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1290, -146 ), Vector2( 1290, -136 ) ]
}

[sub_resource type="Animation" id=18]
resource_name = "JumpArea"
length = 3.0
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("JumpArea/Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 465, -146 ), Vector2( 465, -136 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "WalkArea"
length = 3.0
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("WalkArea/Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 123, -146 ), Vector2( 123, -136 ) ]
}

[node name="Tutorial" type="Node2D"]
script = ExtResource( 2 )

[node name="Node2D" type="Node2D" parent="."]

[node name="Main" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
collision_layer = 16
format = 1
tile_data = PoolIntArray( 65518, 1, 0, 65519, 1, 1, 65520, 1, 1, 65521, 1, 1, 65522, 1, 1, 65523, 1, 1, 65524, 1, 1, 65525, 1, 1, 65526, 1, 1, 65527, 1, 1, 65528, 1, 1, 65529, 1, 1, 65530, 1, 1, 65531, 1, 1, 65532, 1, 1, 65533, 1, 1, 65534, 1, 1, 65535, 1, 1, 0, 1, 1, 1, 1, 1, 2, 1, 1, 3, 1, 1, 4, 1, 1, 5, 1, 1, 6, 1, 1, 7, 1, 1, 8, 1, 1, 9, 1, 1, 10, 1, 1, 11, 1, 1, 12, 1, 1, 13, 1, 1, 14, 1, 1, 15, 1, 1, 16, 1, 1, 17, 1, 1, 18, 1, 1, 19, 1, 1, 20, 1, 1, 21, 1, 1, 22, 1, 1, 23, 1, 1, 24, 1, 1, 25, 1, 1, 26, 1, 1, 27, 1, 1, 28, 1, 1, 29, 1, 1, 30, 1, 1, 31, 1, 1, 32, 1, 1, 33, 1, 1, 34, 1, 1, 35, 1, 1, 36, 1, 1, 37, 1, 1, 38, 1, 1, 39, 1, 1, 40, 1, 1, 41, 1, 1, 42, 1, 1, 43, 1, 1, 44, 1, 1, 45, 1, 1, 46, 1, 1, 47, 1, 1, 48, 1, 1, 49, 1, 1, 50, 1, 1, 51, 1, 1, 52, 1, 1, 53, 1, 1, 54, 1, 1, 55, 1, 1, 56, 1, 1, 57, 1, 1, 58, 1, 1, 59, 1, 1, 60, 1, 1, 61, 1, 1, 62, 1, 1, 63, 1, 1, 64, 1, 1, 65, 1, 1, 66, 1, 1, 67, 1, 1, 68, 1, 1, 69, 1, 1, 70, 1, 1, 71, 1, 1, 72, 1, 1, 73, 1, 1, 74, 1, 1, 75, 1, 1, 76, 1, 1, 77, 1, 1, 78, 1, 1, 79, 1, 1, 80, 1, 1, 81, 1, 1, 82, 1, 1, 83, 1, 1, 84, 1, 1, 85, 1, 1, 86, 1, 1, 87, 1, 1, 88, 1, 1, 89, 1, 1, 90, 1, 1, 91, 1, 1, 92, 1, 1, 93, 1, 1, 94, 1, 1, 95, 1, 1, 96, 1, 1, 97, 1, 1, 98, 1, 1, 99, 1, 1, 100, 1, 1, 101, 1, 1, 102, 1, 1, 103, 1, 1, 104, 1, 2, 131054, 1, 65536, 131055, 1, 65537, 131056, 1, 65537, 131057, 1, 65537, 131058, 1, 65537, 131059, 1, 65537, 131060, 1, 65537, 131061, 1, 65537, 131062, 1, 65537, 131063, 1, 65537, 131064, 1, 65537, 131065, 1, 65537, 131066, 1, 65537, 131067, 1, 65537, 131068, 1, 65537, 131069, 1, 65537, 131070, 1, 65537, 131071, 1, 65537, 65536, 1, 65537, 65537, 1, 65537, 65538, 1, 65537, 65539, 1, 65537, 65540, 1, 65537, 65541, 1, 65537, 65542, 1, 65537, 65543, 1, 65537, 65544, 1, 65537, 65545, 1, 65537, 65546, 1, 65537, 65547, 1, 65537, 65548, 1, 65537, 65549, 1, 65537, 65550, 1, 65537, 65551, 1, 65537, 65552, 1, 65537, 65553, 1, 65537, 65554, 1, 65537, 65555, 1, 65537, 65556, 1, 65537, 65557, 1, 65537, 65558, 1, 65537, 65559, 1, 65537, 65560, 1, 65537, 65561, 1, 65537, 65562, 1, 65537, 65563, 1, 65537, 65564, 1, 65537, 65565, 1, 65537, 65566, 1, 65537, 65567, 1, 65537, 65568, 1, 65537, 65569, 1, 65537, 65570, 1, 65537, 65571, 1, 65537, 65572, 1, 65537, 65573, 1, 65537, 65574, 1, 65537, 65575, 1, 65537, 65576, 1, 65537, 65577, 1, 65537, 65578, 1, 65537, 65579, 1, 65537, 65580, 1, 65537, 65581, 1, 65537, 65582, 1, 65537, 65583, 1, 65537, 65584, 1, 65537, 65585, 1, 65537, 65586, 1, 65537, 65587, 1, 65537, 65588, 1, 65537, 65589, 1, 65537, 65590, 1, 65537, 65591, 1, 65537, 65592, 1, 65537, 65593, 1, 65537, 65594, 1, 65537, 65595, 1, 65537, 65596, 1, 65537, 65597, 1, 65537, 65598, 1, 65537, 65599, 1, 65537, 65600, 1, 65537, 65601, 1, 65537, 65602, 1, 65537, 65603, 1, 65537, 65604, 1, 65537, 65605, 1, 65537, 65606, 1, 65537, 65607, 1, 65537, 65608, 1, 65537, 65609, 1, 65537, 65610, 1, 65537, 65611, 1, 65537, 65612, 1, 65537, 65613, 1, 65537, 65614, 1, 65537, 65615, 1, 65537, 65616, 1, 65537, 65617, 1, 65537, 65618, 1, 65537, 65619, 1, 65537, 65620, 1, 65537, 65621, 1, 65537, 65622, 1, 65537, 65623, 1, 65537, 65624, 1, 65537, 65625, 1, 65537, 65626, 1, 65537, 65627, 1, 65537, 65628, 1, 65537, 65629, 1, 65537, 65630, 1, 65537, 65631, 1, 65537, 65632, 1, 65537, 65633, 1, 65537, 65634, 1, 65537, 65635, 1, 65537, 65636, 1, 65537, 65637, 1, 65537, 65638, 1, 65537, 65639, 1, 65537, 65640, 1, 65538, 196590, 1, 65536, 196591, 1, 65537, 196592, 1, 65537, 196593, 1, 65537, 196594, 1, 65537, 196595, 1, 65537, 196596, 1, 65537, 196597, 1, 65537, 196598, 1, 65537, 196599, 1, 65537, 196600, 1, 65537, 196601, 1, 65537, 196602, 1, 65537, 196603, 1, 65537, 196604, 1, 65537, 196605, 1, 65537, 196606, 1, 65537, 196607, 1, 65537, 131072, 1, 65537, 131073, 1, 65537, 131074, 1, 65537, 131075, 1, 65537, 131076, 1, 65537, 131077, 1, 65537, 131078, 1, 65537, 131079, 1, 65537, 131080, 1, 65537, 131081, 1, 65537, 131082, 1, 65537, 131083, 1, 65537, 131084, 1, 65537, 131085, 1, 65537, 131086, 1, 65537, 131087, 1, 65537, 131088, 1, 65537, 131089, 1, 65537, 131090, 1, 65537, 131091, 1, 65537, 131092, 1, 65537, 131093, 1, 65537, 131094, 1, 65537, 131095, 1, 65537, 131096, 1, 65537, 131097, 1, 65537, 131098, 1, 65537, 131099, 1, 65537, 131100, 1, 65537, 131101, 1, 65537, 131102, 1, 65537, 131103, 1, 65537, 131104, 1, 65537, 131105, 1, 65537, 131106, 1, 65537, 131107, 1, 65537, 131108, 1, 65537, 131109, 1, 65537, 131110, 1, 65537, 131111, 1, 65537, 131112, 1, 65537, 131113, 1, 65537, 131114, 1, 65537, 131115, 1, 65537, 131116, 1, 65537, 131117, 1, 65537, 131118, 1, 65537, 131119, 1, 65537, 131120, 1, 65537, 131121, 1, 65537, 131122, 1, 65537, 131123, 1, 65537, 131124, 1, 65537, 131125, 1, 65537, 131126, 1, 65537, 131127, 1, 65537, 131128, 1, 65537, 131129, 1, 65537, 131130, 1, 65537, 131131, 1, 65537, 131132, 1, 65537, 131133, 1, 65537, 131134, 1, 65537, 131135, 1, 65537, 131136, 1, 65537, 131137, 1, 65537, 131138, 1, 65537, 131139, 1, 65537, 131140, 1, 65537, 131141, 1, 65537, 131142, 1, 65537, 131143, 1, 65537, 131144, 1, 65537, 131145, 1, 65537, 131146, 1, 65537, 131147, 1, 65537, 131148, 1, 65537, 131149, 1, 65537, 131150, 1, 65537, 131151, 1, 65537, 131152, 1, 65537, 131153, 1, 65537, 131154, 1, 65537, 131155, 1, 65537, 131156, 1, 65537, 131157, 1, 65537, 131158, 1, 65537, 131159, 1, 65537, 131160, 1, 65537, 131161, 1, 65537, 131162, 1, 65537, 131163, 1, 65537, 131164, 1, 65537, 131165, 1, 65537, 131166, 1, 65537, 131167, 1, 65537, 131168, 1, 65537, 131169, 1, 65537, 131170, 1, 65537, 131171, 1, 65537, 131172, 1, 65537, 131173, 1, 65537, 131174, 1, 65537, 131175, 1, 65537, 131176, 1, 65538, 262126, 1, 131072, 262127, 1, 131073, 262128, 1, 131073, 262129, 1, 131073, 262130, 1, 131073, 262131, 1, 131073, 262132, 1, 131073, 262133, 1, 131073, 262134, 1, 131073, 262135, 1, 131073, 262136, 1, 131073, 262137, 1, 131073, 262138, 1, 131073, 262139, 1, 131073, 262140, 1, 131073, 262141, 1, 131073, 262142, 1, 131073, 262143, 1, 131073, 196608, 1, 131073, 196609, 1, 131073, 196610, 1, 131073, 196611, 1, 131073, 196612, 1, 131073, 196613, 1, 131073, 196614, 1, 131073, 196615, 1, 131073, 196616, 1, 131073, 196617, 1, 131073, 196618, 1, 131073, 196619, 1, 131073, 196620, 1, 131073, 196621, 1, 131073, 196622, 1, 131073, 196623, 1, 131073, 196624, 1, 131073, 196625, 1, 131073, 196626, 1, 131073, 196627, 1, 131073, 196628, 1, 131073, 196629, 1, 131073, 196630, 1, 131073, 196631, 1, 131073, 196632, 1, 131073, 196633, 1, 131073, 196634, 1, 131073, 196635, 1, 131073, 196636, 1, 131073, 196637, 1, 131073, 196638, 1, 131073, 196639, 1, 131073, 196640, 1, 131073, 196641, 1, 131073, 196642, 1, 131073, 196643, 1, 131073, 196644, 1, 131073, 196645, 1, 131073, 196646, 1, 131073, 196647, 1, 131073, 196648, 1, 131073, 196649, 1, 131073, 196650, 1, 131073, 196651, 1, 131073, 196652, 1, 131073, 196653, 1, 131073, 196654, 1, 131073, 196655, 1, 131073, 196656, 1, 131073, 196657, 1, 131073, 196658, 1, 131073, 196659, 1, 131073, 196660, 1, 131073, 196661, 1, 131073, 196662, 1, 131073, 196663, 1, 131073, 196664, 1, 131073, 196665, 1, 131073, 196666, 1, 131073, 196667, 1, 131073, 196668, 1, 131073, 196669, 1, 131073, 196670, 1, 131073, 196671, 1, 131073, 196672, 1, 131073, 196673, 1, 131073, 196674, 1, 131073, 196675, 1, 131073, 196676, 1, 131073, 196677, 1, 131073, 196678, 1, 131073, 196679, 1, 131073, 196680, 1, 131073, 196681, 1, 131073, 196682, 1, 131073, 196683, 1, 131073, 196684, 1, 131073, 196685, 1, 131073, 196686, 1, 131073, 196687, 1, 131073, 196688, 1, 131073, 196689, 1, 131073, 196690, 1, 131073, 196691, 1, 131073, 196692, 1, 131073, 196693, 1, 131073, 196694, 1, 131073, 196695, 1, 131073, 196696, 1, 131073, 196697, 1, 131073, 196698, 1, 131073, 196699, 1, 131073, 196700, 1, 131073, 196701, 1, 131073, 196702, 1, 131073, 196703, 1, 131073, 196704, 1, 131073, 196705, 1, 131073, 196706, 1, 131073, 196707, 1, 131073, 196708, 1, 131073, 196709, 1, 131073, 196710, 1, 131073, 196711, 1, 131073, 196712, 1, 131074 )

[node name="Decorations" type="TileMap" parent="."]
format = 1

[node name="OneWay" type="TileMap" parent="."]
tile_set = SubResource( 11 )
cell_size = Vector2( 16, 16 )
collision_layer = 2048
collision_mask = 0
format = 1
tile_data = PoolIntArray( -327644, 1, 0, -327643, 1, 1, -327642, 1, 1, -327641, 1, 1, -327640, 1, 1, -327639, 1, 1, -327638, 1, 1, -327637, 1, 1, -327636, 1, 1, -327635, 1, 1, -327634, 1, 1, -327633, 1, 1, -327632, 1, 1, -327631, 1, 1, -327630, 1, 1, -327629, 1, 1, -327628, 1, 1, -327627, 1, 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="OneWay"]
collision_layer = 2048
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="OneWay/StaticBody2D"]
position = Vector2( 720, -72 )
shape = SubResource( 12 )
one_way_collision = true

[node name="WalkArea" type="Area2D" parent="."]
collision_layer = 0

[node name="Sprite" type="Sprite" parent="WalkArea"]
position = Vector2( 123, -146 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WalkArea"]
position = Vector2( 124, -120.5 )
shape = SubResource( 13 )

[node name="JumpArea" type="Area2D" parent="."]

[node name="Sprite" type="Sprite" parent="JumpArea"]
position = Vector2( 465, -138.083 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="JumpArea"]
position = Vector2( 462.5, -120 )
shape = SubResource( 15 )

[node name="CrouchArea" type="Area2D" parent="."]

[node name="Sprite" type="Sprite" parent="CrouchArea"]
position = Vector2( 720, -179.667 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="CrouchArea"]
position = Vector2( 720, -177.5 )
shape = SubResource( 16 )

[node name="DashArea" type="Area2D" parent="."]

[node name="Sprite" type="Sprite" parent="DashArea"]
position = Vector2( 1290, -146 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DashArea"]
position = Vector2( 1288.5, -105 )
shape = SubResource( 19 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "WalkArea"
anims/CrouchArea = SubResource( 17 )
anims/DashArea = SubResource( 20 )
anims/JumpArea = SubResource( 18 )
anims/WalkArea = SubResource( 14 )

[connection signal="body_entered" from="WalkArea" to="." method="_on_WalkArea_body_entered"]
[connection signal="body_exited" from="WalkArea" to="." method="_on_WalkArea_body_exited"]
[connection signal="body_entered" from="JumpArea" to="." method="_on_JumpArea_body_entered"]
[connection signal="body_exited" from="JumpArea" to="." method="_on_JumpArea_body_exited"]
[connection signal="body_entered" from="CrouchArea" to="." method="_on_CrouchArea_body_entered"]
[connection signal="body_exited" from="CrouchArea" to="." method="_on_CrouchArea_body_exited"]
[connection signal="body_entered" from="DashArea" to="." method="_on_DashArea_body_entered"]
[connection signal="body_exited" from="DashArea" to="." method="_on_DashArea_body_exited"]
